Change naming and add functional language